--- a/scss/_block.scss
+++ b/scss/_block.scss
@@ -77,7 +77,8 @@
 }
 
 .app-slider {
-    width: 360px;
+    width: 100%;
+    max-width: 360px;
     margin-left: auto;
     margin-right: auto;
     .owl-item:not(.active) {
