--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -27,6 +27,12 @@
 }
 
 @media all and (max-width: 768px) {
+    .row--crm {
+        flex-direction: column-reverse;
+        & > div:first-child {
+            margin-top: 40px;
+        }
+    }
     .atm h1 {
         white-space: normal;
         font-size: 2rem;
@@ -39,8 +45,8 @@
     .atm {
         height: auto;
         min-height: 0;
-        padding-top: 200px;
-        padding-bottom: 200px;
+        padding-top: 140px;
+        padding-bottom: 140px;
     }
     .block, .recipes, .contact {
         .row > div:not(:last-child) {
@@ -79,5 +85,14 @@
             margin-right: 20px;
             display: inline-block;
         }
+    }
+    .hidden-on-mobile {
+        display: none;
+    }
+    .atm h1 {
+        font-size: 1.7rem;
+    }
+    h2 {
+        font-size: 1.8rem;
     }
 }
