--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -11,6 +11,12 @@
         font-weight: 900;
         color: #FFFFFF;
         margin-right: 67px;
+        font-size: 0;
+        width: 53px;
+        height: 31px;
+        overflow: hidden;
+        background: url('../img/icon-vk.png') no-repeat center;
+        background-size: cover;
     }
 
     &__search {
