--- a/scss/blocks/_success.scss
+++ b/scss/blocks/_success.scss
@@ -1,16 +1,17 @@
 .success {
     
-    background-color: lightblue;
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    width: 100%;
 
     .container {
         display: flex;
         justify-content: space-between;
         align-items: center;
         max-width: 1140px;
+        width: 100%;
     }
 
     &__video {
