--- a/ie/css/ie.css
+++ b/ie/css/ie.css
@@ -1,3 +1,11 @@
 body {
     background-color: red !important;
 }
+
+.login {
+    height: 100%;
+}
+
+.login__button {
+    -sand-transform: translate(98px, 0);
+}
