--- a/scss/blocks/_login.scss
+++ b/scss/blocks/_login.scss
@@ -10,7 +10,7 @@
         left: 50%;
         transform: translate(98px, 0);
         line-height: 42px;
-        background: #3990F1;
+        background: #62B370;
         border-radius: 30px;
         padding: 0 50px;
         text-transform: uppercase;
