--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,6 +1,6 @@
 .header {
 
-    background: #3990F1;
+    background: #4680C2;
     border-radius: 0px 0px 10px 10px;
     padding: 14px 60px;
     display: flex;
@@ -24,7 +24,7 @@
         &-input {
             display: inline-block;
             vertical-align: middle;
-            background: #FFFFFF;
+            background: #3B6394;
             border-radius: 4px;
             width: 326px;
             height: 30px;
