--- a/scss/blocks/_medals.scss
+++ b/scss/blocks/_medals.scss
@@ -7,7 +7,7 @@
     align-items: center;
     padding: 15px 20px 15px 10px;;
     z-index: 9;
-    background: #3990F1;
+    background: #3B6394;
     border-radius: 10px;
     cursor: default;
 
